--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,13 @@
-sudo: required
+language: generic
+
 services:
-    - docker
+  - docker
 
 before_install:
     - docker build -t  sashamv/react-test -f ./client/Dockerfile.dev ./client
 
 script:
-    - docker run sashamv/react-test npm test -- --coverage
+    - docker run -e CI=true sashamv/react-test npm test -- --coverage
 
 after_success:
     - docker build -t sashamv/multi-client ./client
