changed travis yml 3

--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,7 @@ after_success:
     - docker build -t sashamv/multi-server ./server
     - docker build -t sashamv/multi-worker ./worker
 
-    - echo "docker_password" | docker login -u "docker_id" --password-stdin
+    - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_ID" --password-stdin
 
     - docker push sashamv/multi-client
     - docker push sashamv/multi-nginx
