--- a/.travis.yml
+++ b/.travis.yml
@@ -10,14 +10,14 @@ script:
     - docker run -e CI=true sashamv/react-test npm test -- --coverage
 
 after_success:
-    - docker build -t sashamv/multi-client ./client
-    - docker build -t sashamv/multi-nginx ./nginx
-    - docker build -t sashamv/multi-server ./server
-    - docker build -t sashamv/multi-worker ./worker
+    - docker build -t jamss/multi-client ./client
+    - docker build -t jamss/multi-nginx ./nginx
+    - docker build -t jamss/multi-server ./server
+    - docker build -t jamss/multi-worker ./worker
 
     - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_ID" --password-stdin
 
-    - docker push sashamv/multi-client
-    - docker push sashamv/multi-nginx
-    - docker push sashamv/multi-server
-    - docker push sashamv/multi-worker
+    - docker push jamss/multi-client
+    - docker push jamss/multi-nginx
+    - docker push jamss/multi-server
+    - docker push jamss/multi-worker
